fixed calendar view on mobile and dots on calendar indicating event

--- a/components/events/calendar.css
+++ b/components/events/calendar.css
@@ -19,4 +19,5 @@
 .react-calendar__tile {
   padding: 8px 0 !important;
   border-radius: 6px;
+  position: relative !important;
 }
